add new summary

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,4 +34,8 @@ jobs:
         run: |
           OUTPUT=$(docker run --rm ghcr.io/${{ github.repository_owner }}/demo-devops-docker:latest)
           echo "$OUTPUT"
-          echo "::notice title=Mensaje ASCII::$OUTPUT"
+          echo "## Mensaje ASCII" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          echo "$OUTPUT" >> $GITHUB_STEP_SUMMARY
+          echo '```' >> $GITHUB_STEP_SUMMARY
+          echo "::notice title=Ejecución completada::Ver mensaje ASCII en el resumen del job"
